// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing Link recon local file 1`] = `
Object {
  "location": "/hello.org",
  "protocol": "file",
  "raw": "file:/hello.org",
}
`;

exports[`Parsing Link recon local file 2`] = `
Object {
  "location": "./hello.org",
  "protocol": "file",
  "raw": "./hello.org",
}
`;

exports[`Parsing Link recon local file 3`] = `
Object {
  "location": "./hello.org",
  "protocol": "file",
  "query": Object {
    "ln": 23,
  },
  "raw": "./hello.org::23",
}
`;

exports[`Parsing Link recon local file 4`] = `
Object {
  "location": "./hello.org",
  "protocol": "file",
  "query": Object {
    "heading": "shopping list",
  },
  "raw": "./hello.org::*shopping list",
}
`;

exports[`Parsing Link recon local file 5`] = `
Object {
  "location": "./hello.org",
  "protocol": "file",
  "query": Object {
    "text": "apple pie",
  },
  "raw": "./hello.org::apple pie",
}
`;

exports[`Parsing Link recon other protocol 1`] = `
Object {
  "location": "//google.com",
  "protocol": "http",
  "raw": "http://google.com",
}
`;

exports[`Parsing Link recon other protocol 2`] = `
Object {
  "location": "dawnstar.hu@gmail.com",
  "protocol": "mailto",
  "raw": "mailto:dawnstar.hu@gmail.com",
}
`;
